--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Welcome to Process2Text</h1>
+<h1>Welcome to Process2Text 2020</h1>
 <text style="display: block">This webservice transforms any a workflow net into a business process description.</text>
 <img src="img/meme.jpg" style="padding-top: 30px" height="400" width="400">
 </body>
