--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <title>Process2Text</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <script type="text/JavaScript">
+    $(document).ready(function(){
+        $("#pnml-form").submit(function(e) {
+            event.preventDefault();
+            $.ajax({
+                type: "post",
+                url: "./generateText",
+                data: $('#pnml').val(),
+                contentType: "text/plain",
+                success: function(responseData, textStatus, jqXHR) {
+                    $('#result').text(responseData);
+                },
+                error: function(jqXHR, textStatus, errorThrown) {
+                    console.log(errorThrown);
+                }
+                })
+            })
+            })
+    </script>
 </head>
 <body>
-<h1>Welcome to Process2Text 2020</h1>
-<text style="display: block">This webservice transforms any a workflow net into a business process description.</text>
-<img src="img/meme.jpg" style="padding-top: 30px" height="400" width="400">
+<div class="container" style="margin-top: 2em">
+    <h1>Welcome to Process2Text!</h1>
+    <h2>Paste the content of your pnml.xml here:</h2>
+    <form method="POST" id="pnml-form">
+        <textarea id="pnml"  class="form-control" style="min-width: 100%; min-height: 40em;" name=" "></textarea>
+        <input class="btn btn-primary" type="submit" value="Submit" style="margin-top: 1em">
+    </form>
+    <hr class="mt-2 mb-3"/>
+    <h2>Result:</h2>
+    <textarea id="result"  class="form-control" style="min-width: 100%; min-height: 20em;"></textarea>
+</div>
 </body>
 </html>
