--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,11 +7,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <title>Process2Text</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <script type="text/JavaScript">
     $(document).ready(function(){
-        $("#pnml-form").submit(function(e) {
+        $("#pnml-form-text").submit(function(e) {
             event.preventDefault();
             $.ajax({
                 type: "post",
@@ -19,27 +20,58 @@
                 data: $('#pnml').val(),
                 contentType: "text/plain",
                 success: function(responseData, textStatus, jqXHR) {
-                    $('#result').text(responseData);
+                    $('#result').val("");
+                    $('#result').val(responseData);
+                    console.log("Hi Text");
                 },
                 error: function(jqXHR, textStatus, errorThrown) {
                     console.log(errorThrown);
                 }
+            })
+        })
+        $("#upload").on("click", function(e) {
+            event.preventDefault();
+            var file = $("#upload-file").prop("files")[0];
+            var fileData = file.text().then(text => {
+                 $.ajax({
+                    type: "post",
+                    url: "./generateText",
+                    data: text,
+                    contentType: "text/plain",
+                    success: function(responseData, textStatus, jqXHR) {
+                        $('#result').val("");
+                        $('#result').val(responseData);
+                        console.log(responseData)
+                        console.log("Hi File");
+                    },
+                    error: function(jqXHR, textStatus, errorThrown) {
+                        console.log(errorThrown);
+                    }
                 })
             })
-            })
+        })
+    })
+
+
     </script>
 </head>
 <body>
 <div class="container" style="margin-top: 2em">
     <h1>Welcome to Process2Text!</h1>
-    <h2>Paste the content of your pnml.xml here:</h2>
-    <form method="POST" id="pnml-form">
-        <textarea id="pnml"  class="form-control" style="min-width: 100%; min-height: 40em;" name=" "></textarea>
+    <h2>Paste the content of your xml file (bpmn, pnml) here:</h2>
+    <form method="POST" id="pnml-form-text">
+        <textarea id="pnml" class="form-control" style="min-width: 100%; min-height: 40em;" name=" "></textarea>
         <input class="btn btn-primary" type="submit" value="Submit" style="margin-top: 1em">
     </form>
+    <h2>Or select your file:</h2>
+    <form method="POST" id="pnml-form-file" enctype="multipart/form-data">
+        <label>File</label>
+        <input id="upload-file" type="file" name="file" accept=".pnml, .bpmn" required/>
+    </form>
+    <input id="upload" class="btn btn-primary" type="submit" value="Upload" style="margin-top: 1em">
     <hr class="mt-2 mb-3"/>
     <h2>Result:</h2>
-    <textarea id="result"  class="form-control" style="min-width: 100%; min-height: 20em;"></textarea>
+    <textarea id="result" class="form-control" style="min-width: 100%; min-height: 20em;"></textarea>
 </div>
 </body>
 </html>
