--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -55,7 +55,7 @@
 <body>
 <div class="container" style="margin-top: 2em">
     <h1>Welcome to Process2Text!</h1>
-    <h2>Paste the content of your xml file (bpmn, pnml) here:</h2>
+    <h2>Paste the content of your process model file (BPMN or PNML) here:</h2>
     <form method="POST" id="pnml-form-text">
         <textarea id="pnml" class="form-control" style="min-width: 100%; min-height: 40em;" name=" "></textarea>
         <input class="btn btn-primary" type="submit" value="Submit" style="margin-top: 1em">
