Show info text for bpmn transformation

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -65,6 +65,11 @@
         <label>File</label>
         <input id="upload-file" type="file" name="file" accept=".pnml, .bpmn" required/>
     </form>
+    <div><p class="text-info">We apologize but the transformation of BPMN to text is currently under construction.
+        Please retry later and/or
+        make use of the transformation of PNML to text by entering a workflow net in PNML format into the text box
+        above.</p>
+    </div>
     <input id="upload" class="btn btn-primary" type="submit" value="Upload" style="margin-top: 1em">
     <hr class="mt-2 mb-3"/>
     <h2>Result:</h2>
